# hyperdim-proteins

./: .gitignore  Cargo.toml  README.md  process_data.py  protein_model.py  protein_model_positional.py  pyproject.toml  synthetic_aa_with_motif.py
.github/workflows/: CI.yml
src/: lib.rs
